last digit truncation for 3 digit numbered-fix

--- a/src/assets/css/kq.less
+++ b/src/assets/css/kq.less
@@ -175,7 +175,7 @@ div.ui-keyboard, div.ui-widget-content, .ui-widget{
 
                 &.current-quantity{
                     text-align:right;
-                    width:40%;
+                    width:42%;
                 }
             }
             .separator{
